# argus

./: pyproject.toml
argus/: main.py  notification.py  plugin.py  widgets.py
argus/plugins/: test1.py
argus/plugins/windows_usage/: __init__.py
