[tool.poetry]
name = "argus"
version = "0.1.0"
description = ""
authors = ["LiaoKong <568250549@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
psutil = "^6.0.0"
pyside2 = "^5.15.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
